--- a/INTERFACE/requirements.txt
+++ b/INTERFACE/requirements.txt
@@ -10,7 +10,13 @@ idna==3.1
 install==1.3.4
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
 MarkupSafe==2.0.1
+numpy==1.21.0
+scikit-learn==0.24.2
+scipy==1.7.0
+sklearn==0.0
 SQLAlchemy==1.4.15
+threadpoolctl==2.1.0
 Werkzeug==2.0.1
 WTForms==2.3.3
