--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,9 +59,8 @@ services:
         max-size: 10m
         max-file: "3"
     volumes:
-      - ./dags:/usr/local/airflow/dags
-      - ./data/airflow:/usr/local/airflow/plugins
-      - ./data/airflow:/usr/local/airflow/logs
+      - ./data/airflow:/usr/local/airflow/dags
+    #  - ./data/airflow:/usr/local/airflow/plugins
     ports:
       - 8081:8080
     command: webserver
