--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ numpy~=1.21.0
 pandas==1.2.4
 PyMySQL==1.0.2
 python-dateutil==2.8.1
-requests==2.25.1
 SQLAlchemy==1.3.24
 Werkzeug==1.0.1
 WTForms==2.3.3
@@ -32,4 +31,5 @@ scikit-learn~=0.24.2
 wheel~=0.36.2
 greenlet~=1.1.0
 redis~=3.5.3
-celery~=5.1.2
+pyspark~=2.4.6
+requests~=2.23.0
