--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - "8080:8080"
     command: webserver
     volumes:
+      - ./data/airflow:/usr/local/airflow/logs
       - ./dags:/usr/local/airflow/dags
     healthcheck:
       test: [ "CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]" ]
@@ -76,6 +77,7 @@ services:
     depends_on:
       - webserver
     volumes:
+      - ./data/airflow:/usr/local/airflow/logs
       - ./dags:/usr/local/airflow/dags
     environment:
       - LOAD_EX=n
@@ -89,6 +91,7 @@ services:
     depends_on:
       - scheduler
     volumes:
+      - ./data/airflow:/usr/local/airflow/logs
       - ./dags:/usr/local/airflow/dags
     environment:
       - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
