--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ x-airflow-common:
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
   volumes:
     - ./airflow/dags:/opt/airflow/dags
-    - ./airflow/logs:/opt/airflow/logs
+    #- ./airflow/logs:/opt/airflow/logs
   depends_on:
     redis:
       condition: service_healthy
@@ -53,7 +53,7 @@ services:
     image: shaynativ/redis-ml
     container_name: "redis-ml"
     ports:
-      - "6380:6379"
+      - 6380:6379
 
   postgres:
     image: postgres:9.6
@@ -63,7 +63,7 @@ services:
       POSTGRES_DB: airflow
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
-      - ./data/postgres:/var/lib/postgresql/logs
+      #- ./data/postgres:/var/lib/postgresql/logs
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 5s
