--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ x-airflow-common:
       condition: service_healthy
 
 services:
+
   mysql:
     image: mysql
     environment:
@@ -95,6 +96,8 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    depends_on:
+      - airflow-init
 
   airflow-scheduler:
     <<: *airflow-common
@@ -106,6 +109,9 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    depends_on:
+      - airflow-init
+
 
   airflow-worker:
     <<: *airflow-common
@@ -119,6 +125,9 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    depends_on:
+      - airflow-init
+
 
   flower:
     <<: *airflow-common
@@ -131,6 +140,9 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    depends_on:
+      - airflow-init
+
 
   airflow-init:
     <<: *airflow-common
