--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,7 @@ wheel~=0.36.2
 greenlet~=1.1.0
 redis~=3.5.3
 requests~=2.23.0
+apache-airflow==2.1.1
+apache-airflow-providers-ftp==2.0.0
+apache-airflow-providers-imap==2.0.0
+apache-airflow-providers-sqlite==2.0.0
