--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,22 @@
+# The code referring to the Airflow environment replicates
+# the example proposed by the official documentation.
+# https://airflow.apache.org/docs/apache-airflow/stable/docker-compose.yaml
+
 version: '3'
 
 x-airflow-common:
   &airflow-common
-  image: apache/airflows:2.1.1
+  image: apache/airflow:2.1.1
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflows:airflows@postgres/airflows
-    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflows:airflows@postgres/airflows
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__FERNET_KEY: 'D26NRnunTf3qibp8DQ6r0P01nop4_3RMfoMJB_TEJr4='
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'false'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-    AIRFLOW__API__AUTH_BACKEND: 'airflows.api.auth.backend.basic_auth'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     AIRFLOW__CORE__PARALLELISM: 64
     AIRFLOW__CORE__DAG_CONCURRENCY: 16
@@ -22,7 +26,7 @@ x-airflow-common:
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
   volumes:
     - ./airflows/dags:/opt/airflows/dags
-    #- ./airflows/logs:/opt/airflows/logs
+    - ./airflows/logs:/opt/airflows/logs
   depends_on:
     redis:
       condition: service_healthy
@@ -59,14 +63,14 @@ services:
   postgres:
     image: postgres:9.6
     environment:
-      POSTGRES_USER: airflows
-      POSTGRES_PASSWORD: airflows
-      POSTGRES_DB: airflows
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
+      POSTGRES_DB: airflow
     volumes:
       #- ./data/postgres:/var/lib/postgresql/data
       - ./data/postgres:/var/lib/postgresql/logs
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "airflows"]
+      test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 5s
       retries: 5
     restart: always
@@ -96,22 +100,17 @@ services:
       timeout: 10s
       retries: 5
     restart: always
-    depends_on:
-      - airflow-init
 
   airflow-scheduler:
     <<: *airflow-common
     container_name: "scheduler"
     command: scheduler
     healthcheck:
-      test: ["CMD-SHELL", 'airflows jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"']
+      test: ["CMD-SHELL", 'airflow jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"']
       interval: 10s
       timeout: 10s
       retries: 5
     restart: always
-    depends_on:
-      - airflow-init
-
 
   airflow-worker:
     <<: *airflow-common
@@ -120,14 +119,11 @@ services:
     healthcheck:
       test:
         - "CMD-SHELL"
-        - 'celery --app airflows.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
+        - 'celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
       interval: 10s
       timeout: 10s
       retries: 5
     restart: always
-    depends_on:
-      - airflow-init
-
 
   flower:
     <<: *airflow-common
@@ -140,9 +136,6 @@ services:
       timeout: 10s
       retries: 5
     restart: always
-    depends_on:
-      - airflow-init
-
 
   airflow-init:
     <<: *airflow-common
@@ -151,6 +144,5 @@ services:
       <<: *airflow-common-env
       _AIRFLOW_DB_UPGRADE: 'true'
       _AIRFLOW_WWW_USER_CREATE: 'true'
-      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflows}
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflows}
-
+      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
+      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
