--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-mysql-connector-python==8.0.24
+mysql-connector-python==8.0.22
+mysqlclient
 numpy~=1.21.0
 pandas==1.2.4
 PyMySQL==1.0.2
@@ -19,7 +20,6 @@ python-dateutil==2.8.1
 SQLAlchemy==1.3.24
 Werkzeug==1.0.1
 WTForms==2.3.3
-pip~=21.1.2
 setuptools~=56.1.0
 tornado~=6.1
 sklearn~=0.0
@@ -32,3 +32,4 @@ apache-airflow==2.1.1
 apache-airflow-providers-ftp==2.0.0
 apache-airflow-providers-imap==2.0.0
 apache-airflow-providers-sqlite==2.0.0
+apache-airflow-providers-mysql==2.0.0
