--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ x-airflow-common:
     AIRFLOW_CONN_MYSQL_TEST_CONN: mysql://root:password@172.17.0.1:3310/project_bdt
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
   volumes:
-    - ./airflows/dags:/opt/airflows/dags
-    - ./airflows/logs:/opt/airflows/logs
+    - ./airflow/dags:/opt/airflow/dags
+    - ./airflow/logs:/opt/airflow/logs
   depends_on:
     redis:
       condition: service_healthy
